<resources>
    <string name="app_name">iStock</string>
    <string name="login">Entrar</string>
    <string name="create_account">Criar Conta</string>
    <string name="forgot_text">Esqueceu sua senha?</string>
    <string name="enter_here">Entre aqui</string>
    <string name="logotipo">logotipo</string>
    <string name="confirm_password">Confirmar senha</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="full_name">Nome completo</string>
    <string name="company_name">Nome da empresa</string>
    <string name="sign_up">Cadastrar</string>
    <string name="company_registration">Cadastro De Empresa</string>
    <string name="confirm">Confirmar</string>
    <string name="forgot_instructions">Enviaremos instruções para que você possa recuperar sua senha.</string>
    <string name="forgot_my_password">Esqueci A Senha</string>
    <string name="requiredField">Campo obrigatório</string>
    <string name="invalid_email">Email inválido</string>
    <string name="invalid_password">Senha inválida</string>
    <string name="invalid_Name">Não é permitido símbolos nem números</string>
    <string name="company_register">Cadastro Da Empresa</string>
    <string name="email_already_registered">Email já cadastrado</string>
    <string name="client_already_registered">Nome já está em uso</string>
    <string name="unknow_error">Erro desconhecido</string>
    <string name="invalid_password_weak">A senha precisa ter de 5 a 10 caracteres</string>
    <string name="invalid_email_or_password">Email ou senha inválidos</string>
    <string name="register_done">Cadastro realizado</string>
    <string name="invalid_password_not_equals">Senhas precisam ser iguais</string>
    <string name="okay">OK</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Inicio</string>
    <string name="sales">Vendas</string>
    <string name="products">Produtos</string>
    <string name="clients">Clientes</string>
    <string name="users">Usuários</string>
    <string name="historic_sales">Histórico de vendas</string>
    <string name="advanced">Avançado</string>
    <string name="settings">Configurações</string>
    <string name="about">Sobre</string>
    <string name="logout">Sair</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clients_register">Cadastro De Clientes</string>
    <string name="street">Rua</string>
    <string name="number">Número</string>
    <string name="district">Bairro</string>
    <string name="city">Cidade</string>
    <string name="state">Estado</string>
    <string name="phone">Telefone</string>
    <string name="phone_subtitle">Telefone </string>
    <string name="details">Detalhes</string>
    <string name="invalid_phone">É preciso ter DDD e 9 digitos</string>
    <string name="edit_successful">Edição realizada com sucesso</string>
    <string name="client_not_registered">Cliente não registrado</string>
    <string name="edit">Editar</string>
    <string name="delete">Deletar</string>
    <string name="client">Cliente</string>
    <string name="name">Nome</string>
    <string name="edit_client">Edição De Cliente</string>
    <string name="register_product">Cadastro De Produto</string>
    <string name="product_name">Nome Do Produto</string>
    <string name="price">Preço</string>
    <string name="minimum_quantity">Quantidade Mínima</string>
    <string name="invalid_value">Valor inválido</string>
    <string name="invalid_quantity">Quantidade Inválida</string>
    <string name="product_already_registered">Produto já registrado</string>
    <string name="quantity">Quantidade Inicial</string>
    <string name="quantity_subtitle">Quantidade</string>
    <string name="price_subtitle">Preço</string>
    <string name="without_info">Não informado</string>
    <string name="edit_product">Edição De Produto</string>
    <string name="product_not_registered">Producto não registrado</string>
    <string name="pick_a_image">Selecione uma imagem</string>
    <string name="company_picture">Foto da empresa</string>
    <string name="keep_logged">Manter conectado</string>
    <string name="function">Função</string>
    <string name="administration">Administração</string>
    <string name="production">Produção</string>
    <string name="register_user_company">Cadastro De Usuário Da Empresa</string>
    <string name="domain_email_istock">\@iStock.com</string>
    <string name="status_account">Status Da Conta</string>
    <string name="active">Ativo</string>
    <string name="inactive">Inativo</string>
    <string name="at_first_access">Em primeiro acesso</string>
    <string name="share">Compartilhar</string>
    <string name="change_type">Mudar tipo</string>
    <string name="save">Salvar</string>
    <string name="user_not_registered">Usuário não registrado</string>
    <string name="first_access">Primeiro Acesso</string>
    <string name="set_your_new_password_access">Digite sua nova senha de acesso</string>
    <string name="change">Alterar</string>
    <string name="cancel">Cancelar</string>
    <string name="delete_my_account">Excluir minha conta</string>
    <string name="any_text">TextoQualquer</string>
    <string name="settings_account">Configurações</string>
    <string name="currenty_company_name">Nome atual da empresa</string>
    <string name="new_company_name">Novo nome da empresa</string>
    <string name="currenty_name">Nome atual</string>
    <string name="new_name">Novo nome</string>
    <string name="currenty_email">Email atual</string>
    <string name="new_email">Novo email</string>
    <string name="currenty_password">Senha atual</string>
    <string name="new_password">Nova senha</string>
    <string name="edition_of_company_name">Edição de nome da empresa</string>
    <string name="edition_of_email">Edição do email</string>
    <string name="edition_of_name">Edição de nome</string>
    <string name="edition_of_password">Edição de senha</string>
    <string name="invalid_currenty_password">Senha atual incorreta</string>
    <string name="delete_account">Deletar conta</string>
    <string name="total">Total</string>
    <string name="realized">Realizada</string>
    <string name="delivery">Entrega</string>
    <string name="created">Criação</string>
    <string name="finalization_sale">Finalização de Venda</string>
    <string name="add">Adicionar</string>
    <string name="delivery_date">Data de entrega</string>
    <string name="invalid">Inválido</string>
    <string name="sale_done">Registrado</string>
    <string name="at_stock">Em estoque</string>
    <string name="activate">Ativar</string>
    <string name="are_you_sure_to_delete_this_item">Deseja deletar este item?</string>
    <string name="are_you_sure_for_finish_order">Deseja finalizar a encomenda?</string>
</resources>
