<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".gui.EditClientActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="top">

            <TextView
                android:id="@+id/textViewEditClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="32dp"
                android:text="@string/edit_client"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="28sp"
                />

            <EditText
                android:id="@+id/editTextNameEditClient"
                style="@style/edit_text"
                android:hint="@string/full_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextStreetEditClient"
                style="@style/edit_text"
                android:hint="@string/street"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextNumberEditClient"
                style="@style/edit_text"
                android:hint="@string/number"
                android:inputType="number" />

            <EditText
                android:id="@+id/editTextDistrictEditClient"
                style="@style/edit_text"
                android:hint="@string/district"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextCityEditClient"
                style="@style/edit_text"
                android:hint="@string/city"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextStateEditClient"
                style="@style/edit_text"
                android:hint="@string/state"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextPhoneEditClient"
                style="@style/edit_text"
                android:hint="@string/phone"
                android:inputType="number" />

            <Button
                android:id="@+id/buttonRegisterEditClient"
                style="@style/button_primary"
                android:onClick="edit"
                android:text="@string/confirm"/>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>