<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    tools:context=".gui.product.RegisterProductActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="top">

            <TextView
                android:id="@+id/textViewRegisterProduct"
                android:text="@string/register_product"
                style="@style/title_register_or_edit"/>

            <ImageView
                android:id="@+id/editImageRegisterProduct"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                app:srcCompat="@drawable/product"
                android:layout_gravity="center"/>

            <Button
                android:layout_width="100dp"
                style="@style/button_primary"
                android:text="@string/change"
                android:onClick="pickImage"
                android:layout_gravity="center"/>

            <android.support.design.widget.TextInputLayout
                style="@style/text_input_layout">

                <EditText
                    android:id="@+id/editTextNameRegisterProduct"
                    style="@style/edit_text"
                    android:hint="@string/product_name"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/text_input_layout">

                <EditText
                    android:id="@+id/editTextPriceRegisterProduct"
                    style="@style/edit_text"
                    android:hint="@string/price"
                    android:inputType="numberDecimal" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/text_input_layout">

                <EditText
                    android:id="@+id/editTextQuantityRegisterProduct"
                    style="@style/edit_text"
                    android:hint="@string/quantity"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/text_input_layout">

                <EditText
                    android:id="@+id/editTextMinimumRegisterProduct"
                    style="@style/edit_text"
                    android:hint="@string/minimum_quantity"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/buttonRegisterRegisterProduct"
                style="@style/button_primary"
                android:onClick="register"
                android:text="@string/sign_up"/>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>