<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".gui.EditProductActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="top"
            >


            <TextView
                android:id="@+id/textViewEditProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="32dp"
                android:text="@string/edit_product"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="28sp"
                />

            <EditText
                android:id="@+id/editTextNameEditProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="9dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/product_name"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextPriceEditProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="9dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/price"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/editTextQuantityEditProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="9dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/quantity"
                android:inputType="number" />

            <EditText
                android:id="@+id/editTextMinimumEditProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="9dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/minimum_quantity"
                android:inputType="number" />



            <Button
                android:id="@+id/buttonRegisterEditProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/colorPrimary"
                android:onClick="edit"
                android:text="@string/confirm"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </ScrollView>



</android.support.constraint.ConstraintLayout>